# livegepsimootori

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.in  requirements.txt
conf/: gunicorn.conf.py
routechoices/: .env.dev  hosts.py  settings.py  wsgi-with-cov.py  wsgi.py
routechoices/admin/: urls.py
routechoices/api/: tests.py  urls.py  views.py
routechoices/club/: sitemaps.py  tests.py  urls.py  views.py
routechoices/core/: admin.py  middleware.py  models.py
routechoices/core/migrations/: 0098_remove_club_is_personal_page.py  0101_remove_spotdevice_device_delete_spotfeed_and_more.py  0102_remove_spotdevice_device_delete_spotfeed_and_more.py  0103_remove_event_core_event_list_frontpage_idx_and_more.py  0104_alter_event_featured.py
routechoices/dashboard/: forms.py  urls.py  views.py
routechoices/lib/: helpers.py  kmz.py  tests.py
routechoices/lib/other_gps_services/: gpsseuranta.py  livelox.py
routechoices/lib/tcp_protocols/: __init__.py  codec8.py  commons.py  mictrack.py  queclink.py  tests.py  tracktape.py  xexun.py  xexun2.py
routechoices/mapdump/: views.py
routechoices/registration/: urls.py
routechoices/site/: feeds.py  forms.py  sitemaps.py  tests.py  views.py
routechoices/templates/: footer.html  navbar.html  nginx_domain.conf
routechoices/templates/club/: event.html  event_contribute.html  event_startlist.html  navbar.html
routechoices/templates/dashboard/: account_edit.html  club_view.html  event_edit.html  event_list.html  home.html  (+4 more)
routechoices/wms/: urls.py  views.py
static_assets/styles/: site.css
(+21 files in other folders)
